<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="15dp"
    tools:context="com.example.kamrul.currencyconverter.MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical" >

        <TextView
            android:id="@+id/textUSD"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/us_doller"
            android:textSize="25sp" />

        <EditText
            android:id="@+id/inputUSD"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="textPersonName"
            tools:layout_editor_absoluteX="89dp"
            tools:layout_editor_absoluteY="0dp"
            tools:ignore="Autofill,LabelFor" />

        <TextView
            android:id="@+id/convertEuro"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/after_converting_into_euro"
            android:textSize="25sp"
            tools:layout_editor_absoluteX="16dp"
            tools:layout_editor_absoluteY="60dp" />

        <EditText
            android:id="@+id/resultEuro"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="textPersonName"
            tools:layout_editor_absoluteX="89dp"
            tools:layout_editor_absoluteY="60dp"
            tools:ignore="Autofill,LabelFor" />

        <TextView
            android:id="@+id/convertTaka"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/after_converting_into_taka"
            android:textSize="25sp"
            tools:layout_editor_absoluteX="16dp"
            tools:layout_editor_absoluteY="111dp" />

        <EditText
            android:id="@+id/resultTaka"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="textPersonName"
            tools:layout_editor_absoluteX="89dp"
            tools:layout_editor_absoluteY="99dp"
            tools:ignore="Autofill,LabelFor" />

        <TextView
            android:id="@+id/convertBtc"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/after_converting_into_bitcoin"
            android:textSize="25sp"
            tools:layout_editor_absoluteX="16dp"
            tools:layout_editor_absoluteY="111dp" />

        <EditText
            android:id="@+id/resultBtc"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="textPersonName"
            tools:layout_editor_absoluteX="89dp"
            tools:layout_editor_absoluteY="99dp"
            tools:ignore="Autofill,LabelFor" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <Button
                android:id="@+id/convertBtn"
                android:layout_width="101dp"
                android:layout_height="49dp"
                android:text="@string/convert"
                tools:layout_editor_absoluteX="16dp"
                tools:layout_editor_absoluteY="231dp"
                tools:ignore="ButtonStyle" />

            <Button
                android:id="@+id/clearBtn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/clear"
                tools:layout_editor_absoluteX="133dp"
                tools:layout_editor_absoluteY="231dp"
                tools:ignore="ButtonStyle" />

        </LinearLayout>
    </LinearLayout>

</android.support.constraint.ConstraintLayout>
